kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-app

spec:
  replicas: 5

  selector:
    matchLabels:
      app: demo-app

  template:
    metadata:
      labels:
        app: demo-app

    spec:
      containers:
      - name: demo-app

        image: kartikdevops/gitops-demo:v4

        imagePullPolicy: Always

        ports:
        - containerPort: 5000
